# arduino-cmake-wrapper

./: .env  .gitignore  Dockerfile  README.md  build.sh  container-entrypoint  docker-compose.yml  hostSetup.sh  setup.sh
cmake_wrapper/: BoardOptions.cmake  CMakeLists.txt  config.cmake
cmake_wrapper/binaries/: HelloWorld.elf
cmake_wrapper/sketch/: HelloWorld.ino
